Add examples of drawing automata

--- a/LaTeX-Cheatsheet/TikZ-Demo.tex
+++ b/LaTeX-Cheatsheet/TikZ-Demo.tex
@@ -5,7 +5,7 @@
 \usepackage{float}
 \usepackage{hyperref}
 \usepackage{tikz}
-\usetikzlibrary{shapes.geometric}
+\usetikzlibrary{arrows, automata, positioning, shapes.geometric}
 \usepackage{parskip}
 \usepackage{xcolor}
 
@@ -26,6 +26,8 @@ Useful links
           \item \href{https://latexdraw.com/how-to-draw-venn-diagrams-in-latex/}{How to draw Venn Diagrams in LaTeX}
           \item \href{https://latexdraw.com/how-to-annotate-an-image-in-latex/}{How to Annotate an Image in LaTeX}
           \item \href{https://latexdraw.com/exploring-tikz-arrows/}{TikZ arrows}
+          \item \href{https://hayesall.com/blog/latex-automata/}{LaTeX Finite Automata and State Diagrams with Tikz}
+          \item \href{https://tex.stackexchange.com/a/20786/66282}{Which package can be used to draw automata?}
         \end{enumerate}
 \end{enumerate}
 
@@ -389,6 +391,46 @@ This requires ``shapes.geometric''.
     draw=black,
     left, black, fill=white] at (10,-2) {P(c)=F and Q(c)=F};
   \draw [-stealth] (5.9,-2) -- (4.4,-2);
+\end{tikzpicture}
+
+% =============================================================================
+\section{Finite Automata and State Diagrams}
+% =============================================================================
+
+\begin{tikzpicture}[shorten >=1pt,node distance=2cm,auto]
+  \tikzstyle{every state}=[fill={rgb:black,1;white,10}]
+
+  \node[state,initial]   (s)                      {$s$};
+  \node[state,accepting] (q_1) [below left of=s]  {$q_1$};
+  \node[state]           (q_2) [below of=q_1]     {$q_2$};
+  \node[state,accepting] (r_1) [below right of=s] {$r_1$};
+  \node[state]           (r_2) [below of=r_1]     {$r_2$};
+
+  \path[->]
+  (s)   edge              node {a} (q_1)
+  edge              node {b} (r_1)
+  (q_1) edge [loop left]  node {a} (   )
+  edge [bend left]  node {b} (q_2)
+  (q_2) edge [loop left]  node {b} (   )
+  edge [bend left]  node {a} (q_1)
+  (r_1) edge [loop right] node {b} (   )
+  edge [bend left]  node {a} (r_2)
+  (r_2) edge [loop right] node {a} (   )
+  edge [bend left]  node {b} (r_1);
+\end{tikzpicture}
+
+\begin{tikzpicture}[shorten >=1pt,node distance=2cm,on grid,auto]
+  \node[state,initial] (q_0)   {$q_0$};
+  \node[state] (q_1) [above right=of q_0] {$q_1$};
+  \node[state] (q_2) [below right=of q_0] {$q_2$};
+  \node[state,accepting](q_3) [below right=of q_1] {$q_3$};
+  \path[->]
+  (q_0) edge  node {0} (q_1)
+  edge  node [swap] {1} (q_2)
+  (q_1) edge  node  {1} (q_3)
+  edge [loop above] node {0} ()
+  (q_2) edge  node [swap] {0} (q_3)
+  edge [loop below] node {1} ();
 \end{tikzpicture}
 
 \end{document}
